--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ authors = [
     {name = "Washington Fidelix",email = "fidelix.silva25@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12.1"
 dependencies = [
+    "pandera (>=0.23.1,<0.24.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "fastparquet (>=2024.11.0,<2025.0.0)"
 ]
 
 
